fixing spacing and logo

--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -26,7 +26,7 @@
             align-items: center;
             flex-direction: column;
             gap: (48/16rem);
-            margin-top: 200px
+            padding-top: 200px
         }
 
         .cs-content {
@@ -163,7 +163,7 @@
         .cs-container {
             flex-direction: row;
             justify-content: space-between;
-            margin-top: 100px
+            padding-top: 100px
         }
 
         .cs-content {
