--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -477,7 +477,7 @@
             z-index: 10;
 
             img {
-                width: 100%;
+                width: 120%;
                 height: 100%;
                 /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
                 object-fit: contain;
@@ -824,7 +824,7 @@
             z-index: 100;
 
             img {
-                // width: auto;
+                width: 80%;
                 height: auto;
                 /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
                 object-fit: contain;
